--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,26 @@
         </excludes>
       </resource>
     </resources>
+
+    <dependencies>
+     <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>6.0.35</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.struts</groupId>
+      <artifactId>struts2-core</artifactId>
+      <version>2.3.37</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.struts</groupId>
+      <artifactId>struts2-convention-plugin</artifactId>
+      <version>2.3.37</version>
+    </dependency>
+    </dependencies>
+
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
