--- a/pom.xml
+++ b/pom.xml
@@ -6,41 +6,22 @@
   <packaging>war</packaging>
 
   <dependencies>
-    <dependency>
-		<groupId>org.apache.struts</groupId>
-		<artifactId>struts2-core</artifactId>
-     	<version>2.3.37</version>
-  	</dependency>
-    <dependency>
-    	<groupId>org.apache.struts</groupId>
-		<artifactId>struts2-convention-plugin</artifactId>
-      	<version>2.3.37</version>
-   	</dependency>
-    <dependency>
-        <groupId>org.apache.tomcat.embed</groupId>
-        <artifactId>tomcat-embed-core</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tomcat.embed</groupId>
-        <artifactId>tomcat-embed-jasper</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-jasper</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-jasper-el</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-jsp-api</artifactId>
-        <version>${tomcat.version}</version>
-    </dependency>
+		<dependency>
+	      	<groupId>org.apache.tomcat</groupId>
+				<artifactId>servlet-api</artifactId>
+				<version>8.5.23</version>
+      			<scope>provided</scope>
+    	</dependency>
+    	<dependency>
+		   <groupId>org.apache.struts</groupId>
+				<artifactId>struts2-core</artifactId>
+     			<version>2.3.37</version>
+  		</dependency>
+    	<dependency>
+    		<groupId>org.apache.struts</groupId>
+				<artifactId>struts2-convention-plugin</artifactId>
+      			<version>2.3.37</version>
+    	</dependency>
     </dependencies>
 
   <build>
@@ -55,31 +36,7 @@
       		</resource>
     	</resources>
 
-
     <plugins>
-    	 <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>appassembler-maven-plugin</artifactId>
-            <version>2.0.0</version>
-            <configuration>
-                <assembleDirectory>target</assembleDirectory>
-                <programs>
-                    <program>
-                        <mainClass>launch.Main</mainClass>
-                        <name>webapp</name>
-                    </program>
-                </programs>
-            </configuration>
-            <executions>
-                <execution>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>assemble</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.3</version>
